feat: Add shadcn-ui

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import '@/styles/globals.css'
 import { Image } from 'astro:assets'
 import NotificationHeader from '../components/NotificationHeader.tsx'
 import IconLoginArrow from '../images/iconLoginArrow.svg'
