--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import '@/styles/globals.css'
 import { Image } from 'astro:assets'
+import { CarouselDemo } from '../components/CarouselDemo'
 import NotificationHeader from '../components/NotificationHeader.tsx'
 import IconLoginArrow from '../images/iconLoginArrow.svg'
 import Layout from '../layouts/Layout.astro'
@@ -18,5 +19,6 @@ import Layout from '../layouts/Layout.astro'
         height={16}
       />
     </div>
+    <CarouselDemo client:load />
   </main>
 </Layout>
