--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,9 +25,9 @@ const { title } = Astro.props
     />
     <title>{title}</title>
   </head>
-  <body class="px-4 sm:px-6 min-h-screen lg:px-8 flex bg-black_2">
+  <body class="px-4 sm:px-6 min-h-screen lg:px-8 flex bg-black_2 2">
     <div
-      class="max-w-[360px] w-full my-auto max-h-[740px] overflow-scroll mx-auto text-white"
+      class="max-w-[360px] w-full my-auto max-h-[740px] overflow-scroll mx-auto text-white [&::-webkit-scrollbar]:hidden"
     >
       <slot />
     </div>
