refactor: Add border to layout better debugging

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="우주로또">
-  <main class="px-4 w-full">
+  <main class="px-4 w-full py-1">
     <NotificationHeader client:load />
     <div class="flex items-center gap-2 mt-[30px]">
       <p>로그인 해주세요</p>
