--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props
   </head>
   <body class="px-4 sm:px-6 min-h-screen lg:px-8 flex bg-black_2 2">
     <div
-      class="max-w-[360px] w-full my-auto max-h-[740px] overflow-scroll mx-auto text-white [&::-webkit-scrollbar]:hidden"
+      class="max-w-[360px] w-full my-auto h-[740px] overflow-scroll border-white border-[1px] mx-auto text-white [&::-webkit-scrollbar]:hidden"
     >
       <slot />
     </div>
