--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,10 @@ const { title } = Astro.props
   <head>
     <meta charset="UTF-8" />
     <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta
       name="description"
       content="Astro description"
     />
@@ -29,7 +33,7 @@ const { title } = Astro.props
   </head>
   <body class="min-h-screen flex bg-black_2 2">
     <div
-      class="max-w-[430px] min-w-[360px] w-full my-auto min-h-screen overflow-scroll border-white border-[1px] lg:mx-auto text-white [&::-webkit-scrollbar]:hidden"
+      class="lg:max-w-[430px] min-w-[360px] w-full my-auto min-h-screen overflow-scroll border-white border-[1px] lg:mx-auto text-white [&::-webkit-scrollbar]:hidden"
     >
       <slot />
     </div>
