fix: Fix layout to h-dvh

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props
   </head>
   <body class="min-h-screen flex bg-black_2 2">
     <div
-      class="lg:max-w-[430px] min-w-[360px] w-full my-auto min-h-screen overflow-scroll border-white border-[1px] lg:mx-auto text-white [&::-webkit-scrollbar]:hidden h-screen"
+      class="lg:max-w-[430px] min-w-[360px] w-full my-auto min-h-screen overflow-scroll border-white border-[1px] lg:mx-auto text-white [&::-webkit-scrollbar]:hidden h-dvh"
     >
       <slot />
     </div>
