--- a/src/pages/numbers/[mode].astro
+++ b/src/pages/numbers/[mode].astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../../layouts/Layout.astro'
-import { modes } from '../../lib/type'
+import { generationModeSchema } from '../../lib/type'
+import iconBack from '../../images/iconBack.svg'
+import { Image } from 'astro:assets'
 
 export function getStaticPaths() {
-  return modes.map((mode) => {
+  return generationModeSchema.options.map((mode) => {
     return {
       params: {
         mode: mode,
@@ -13,8 +15,30 @@ export function getStaticPaths() {
 }
 
 const { mode } = Astro.params
+
+const formatNow = () => {
+  const date = new Date()
+  return `${date.getFullYear()}년 ${
+    date.getMonth() + 1
+  }월 ${date.getDate()}일 생성`
+}
 ---
 
-<Layout title="generated">
-  <div>{mode}</div>
+<Layout title="우주로또">
+  <main class="m-4">
+    <button onclick="history.back()">
+      <Image
+        src={iconBack}
+        alt="icon back"
+        width={10}
+        height={16.67}
+      />
+    </button>
+    <div
+      class="w-full pt-10 bg-gradient-to-r from-[#D6C3FF] from-[-5.85%] to-[#7C91FF] to-[80.85%] rounded-[20px]"
+    >
+      <h1 class="text-white text-center font-semibold text-2xl">{mode}</h1>
+      <p class="text-center mt-4">{formatNow()}</p>
+    </div>
+  </main>
 </Layout>
