--- a/src/pages/numbers/[mode].astro
+++ b/src/pages/numbers/[mode].astro
@@ -3,6 +3,7 @@ import Layout from '../../layouts/Layout.astro'
 import { generationModeSchema } from '../../lib/type'
 import iconBack from '../../images/iconBack.svg'
 import { Image } from 'astro:assets'
+import NumberBoard from '../../components/NumberBoard'
 
 export function getStaticPaths() {
   return generationModeSchema.options.map((mode) => {
@@ -34,11 +35,10 @@ const formatNow = () => {
         height={16.67}
       />
     </button>
-    <div
-      class="w-full pt-10 bg-gradient-to-r from-[#D6C3FF] from-[-5.85%] to-[#7C91FF] to-[80.85%] rounded-[20px]"
-    >
-      <h1 class="text-white text-center font-semibold text-2xl">{mode}</h1>
-      <p class="text-center mt-4">{formatNow()}</p>
-    </div>
+    <NumberBoard
+      client:load
+      mode={mode}
+      date={formatNow()}
+    />
   </main>
 </Layout>
