--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,7 @@ const currentPath = Astro.url.pathname
   </head>
   <body class="min-h-screen flex bg-black_2 text-white">
     <div
-      class="lg:max-w-[430px] min-w-[360px] w-full my-auto min-h-screen overflow-scroll lg:border-white lg:border-[1px] lg:mx-auto [&::-webkit-scrollbar]:hidden h-dvh"
+      class="lg:max-w-[430px] min-w-[360px] w-full my-auto min-h-screen overflow-scroll lg:border-white lg:border-[1px] lg:mx-auto [&::-webkit-scrollbar]:hidden"
     >
       <slot />
     </div>
