feat: Fix ouput server

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import NumberPickCarousel from '../components/NumberPickCarousel.tsx'
 import IconLoginArrow from '../images/iconLoginArrow.svg'
 import Layout from '../layouts/Layout.astro'
 
+export const prerender = true
 const session = await getSession(Astro.request)
 ---
 
