--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,6 +3,8 @@ import { Image } from 'astro:assets'
 import iconKakaoTalk from '../images/iconKakaoTalk.svg'
 import iconLoginBalls from '../images/iconLoginBalls.svg'
 import Layout from '../layouts/Layout.astro'
+
+export const prerender = true
 ---
 
 <Layout title="우주로또">
