feat: Add session handling using trpc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,21 +8,18 @@ import IconLoginArrow from '../images/iconLoginArrow.svg'
 import Layout from '../layouts/Layout.astro'
 
 export const prerender = true
-const session = await getSession(Astro.request)
+// const session = await getSession(Astro.request)
 ---
 
 <Layout title="우주로또">
   <main class="w-full py-1">
     <div class="px-4">
       <NotificationHeader client:load />
-      <div class="flex items-center gap-2 mt-[30px]">
-        {
-          session ? (
-            <p>{`안녕하세요 ${session.user?.name}님`}</p>
-          ) : (
-            <a href="/login">로그인 해주세요</a>
-          )
-        }
+      <div
+        class="flex items-center gap-2 mt-[30px]"
+        id="hello"
+      >
+        <a href="/login">로그인 해주세요</a>
         <Image
           src={IconLoginArrow}
           alt="login arrow"
@@ -38,3 +35,12 @@ const session = await getSession(Astro.request)
     />
   </main>
 </Layout>
+
+<script>
+  import { client } from '../lib/trpc/client'
+  const div = (document.getElementById('hello') as HTMLDivElement) ?? null
+  const user = await client.getCurrentUser.query()
+  if (user) {
+    div.innerHTML = `<p>안녕하세요 ${user.name}님</p>`
+  }
+</script>
