feat: Add prerender on /numbers page

--- a/src/pages/numbers/create-self.astro
+++ b/src/pages/numbers/create-self.astro
@@ -2,6 +2,8 @@
 import BackwordNavigator from '../../components/BackwordNavigator.astro'
 import SelfPickBoard from '../../components/SelfPickBoard'
 import Layout from '../../layouts/Layout.astro'
+
+export const prerender = true
 ---
 
 <Layout title="우주로또">
