--- a/src/pages/numbers/create/[mode].astro
+++ b/src/pages/numbers/create/[mode].astro
@@ -1,8 +1,8 @@
 ---
-import BackwordNavigator from '../../components/BackwordNavigator.astro'
-import NumberBoard from '../../components/NumberBoard'
-import Layout from '../../layouts/Layout.astro'
-import { generationModeSchema } from '../../lib/type'
+import BackwordNavigator from '../../../components/BackwordNavigator.astro'
+import NumberBoard from '../../../components/NumberBoard'
+import Layout from '../../../layouts/Layout.astro'
+import { generationModeSchema } from '../../../lib/type'
 
 export const prerender = true
 
