--- a/src/pages/numbers/create/self-board.astro
+++ b/src/pages/numbers/create/self-board.astro
@@ -1,7 +1,7 @@
 ---
-import BackwordNavigator from '../../components/BackwordNavigator.astro'
-import SelfPickBoard from '../../components/SelfPickBoard'
-import Layout from '../../layouts/Layout.astro'
+import BackwordNavigator from '../../../components/BackwordNavigator.astro'
+import SelfPickBoard from '../../../components/SelfPickBoard'
+import Layout from '../../../layouts/Layout.astro'
 
 export const prerender = true
 ---
