feat: Implements /numbers/[id] page

--- a/src/pages/numbers/create/[mode].astro
+++ b/src/pages/numbers/create/[mode].astro
@@ -33,6 +33,7 @@ const formatNow = () => {
       client:load
       mode={mode}
       date={formatNow()}
+      defaultNumbers={[]}
     />
   </main>
 </Layout>
