feat: Implements /numbers page

--- a/src/pages/numbers.astro
+++ b/src/pages/numbers.astro
@@ -1,9 +1,12 @@
 ---
+import NumberList from '../components/NumberList'
 import Layout from '../layouts/Layout.astro'
+
+export const prerender = true
 ---
 
 <Layout title="우주로또">
   <main class="py-3 px-4">
-    <h1 class="font-medium text-xl">번호저장함</h1>
+    <NumberList client:load />
   </main>
 </Layout>
