--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,14 +45,13 @@ const currentPath = Astro.url.pathname
       name="description"
       content="1등 번호를 뽑아보세요!"
     />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/favicon.svg"
-    />
     <meta
       name="generator"
       content={Astro.generator}
+    />
+    <meta
+      name="theme-color"
+      content="#ffffff"
     />
     <link
       rel="icon"
